--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start-express": "node ./bin/www",
     "start-react": "cd client && npm start",
-    "start": "npm run start-express && npm run start-react"
+    "start": "npm run start-express"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
