Changing start script to invoke react and express

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start-express": "node ./bin/www",
-    "start-react": "cd client && npm start",
-    "start": "npm run start-express"
+    "start-express": "node ./bin/www &",
+    "start-react": "cd client && npm start &",
+    "start": "npm run start-express && npm run start-react"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
